Bug 98199 - Missing whitespace in german html-export (headline)
Summary: Missing whitespace in german html-export (headline)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-HTMLGallery (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-30 14:35 UTC by Kay Patzwald
Modified: 2018-03-23 21:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kay Patzwald 2005-01-30 14:35:52 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    SuSE RPMs

Hi,
 
there is a missing whitespace in the headline of the index.html.
<h1>Bildergalerie f&uuml;r Album&quot;BlaFasel&quot;</h1>
                                ^^  

Best regards, Kay
Comment 1 Conrado Quilles Gomes 2005-04-07 20:48:54 UTC
Not only in german in portuguese of brazil too
Comment 2 Tom Albers 2005-08-07 02:14:09 UTC
SVN commit 443708 by toma:

i18n fix for problem with a string. It had a space at the end of the string, translaters left that space out when translating and so a bug was born.

BUG: 98199


 M  +1 -1      imagesgallery.cpp  


--- trunk/extragear/libs/kipi-plugins/imagesgallery/imagesgallery.cpp #443707:443708
@@ -703,7 +703,7 @@
               << endl;
        }
 
-    stream << "<h1>" << i18n("Image Gallery for Album ") << "&quot;" << m_AlbumTitle << "&quot;"
+    stream << "<h1>" << i18n("Image Gallery for Album %1").arg("&quot;"+m_AlbumTitle+"&quot;")
            << "</h1>" << endl;
 
     if (m_useCommentsAlbum == true ||