i18n fix for problem with a string. It had a space at the end of the string, translaters left that space out when translating and so a bug was born.

BUG: 98199

svn path=/trunk/extragear/libs/kipi-plugins/; revision=443708